# Bio-Spheres-Alpha

./: .gitignore  CELL_DEATH_CORRUPTION_FIXES.md  Cargo.toml  DEVELOPER_GUIDE.md  LICENSE  PERFORMANCE_SPIKE_DETECTION.md  README.md  build.rs  cave_settings.ron  cell_visuals.ron  debug_organism_ids.rs  default_dock_state_gpu.ron  default_dock_state_preview.ron  default_ui_state.ron  devlog_tutorial_and_menu.md  fluid_render_settings.ron  fluid_settings.ron  light_settings.ron  new_body.rs  procedural-creature-generation-morphology.md  sun_settings.ron  temp_function.txt  ui_state.ron
assets/: README.md
docs/: fluid_simulation_implementation_plan.md  grid_based_fluid_simulation.md  simplified_voxel_fluid_implementation.md  solid_mask_implementation.md  voxelized_cave_collision_system.md
egui_dock_local/: Cargo.toml
egui_dock_local/src/: style.rs
genomes/: README.md
proptest-regressions/ui/: widgets.txt
references/BioSpheres-Q/: MIGRATION_ANALYSIS.md
shaders/: adhesion_cleanup.wgsl  adhesion_line.wgsl  adhesion_physics.wgsl  adhesion_substep.wgsl  apply_pbd.wgsl  boulder.wgsl  boulder_bubbles.wgsl  boulder_consume.wgsl  boulder_physics.wgsl  build_instances.wgsl  cave_collision.wgsl  cave_spatial_grid_build.wgsl  cave_system.wgsl  cell.wgsl  cell_billboard.wgsl  cell_billboard_color_only.wgsl  cell_billboard_depth.wgsl  cell_billboard_depth_only.wgsl  cell_billboard_oit.wgsl  cell_billboard_optimized.wgsl  cell_boost.wgsl  cell_insertion.wgsl  cell_insertion_v2.wgsl  cell_point_cloud.wgsl  cell_removal.wgsl  cilia_force.wgsl  clear_forces.wgsl  collision_detection.wgsl  death_extract.wgsl  death_particles.wgsl  devorocyte_consume.wgsl  dof_blur.wgsl  dof_composite.wgsl  extract_cell_data.wgsl  extract_instances.wgsl  fov_cone.wgsl  gametocyte_merge.wgsl  genome_compaction.wgsl  genome_gc.wgsl  genome_ref_count_sync.wgsl  (+75 more)
shaders/cells/: .gitkeep  cell_0.wgsl  cell_1.wgsl  cell_2.wgsl  cell_3.wgsl  cell_4.wgsl  cell_unified.wgsl  plumocyte_feathers.wgsl  plumocyte_feathers_gpu.wgsl  siphonocyte_aperture.wgsl  siphonocyte_aperture_gpu.wgsl  siphonocyte_jet_gpu.wgsl  tail.wgsl  tail_gpu.wgsl  test_cell.wgsl  textured_cell.wgsl  unified_cell.wgsl
src/: app.rs  app_dirs.rs  gif_capture.rs  lib.rs  main.rs  size_test.txt  updater.rs
(+190 files in other folders)
